--- a/tailwind css/src/index.html
+++ b/tailwind css/src/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./output.css">
 </head>
 
-<body class="bg-red-200 hover:bg-slate-600">
+<body class="bg-red-200">
     <div class=" w-screen h-screen flex justify-center items-center ">
-        <div class="h-52 w-52 bg-pink-600 hover:bg-pink-800 rounded-2xl mx-24"> </div>
-        <div class="h-52 w-52 bg-pink-950 hover:bg-pink-500 rounded-2xl"> </div>
-        <div class="h-52 w-52 bg-pink-600 hover:bg-pink-800 rounded-3xl mx-24 "> </div>
+        <div class="h-52 w-52 bg-pink-600 hover:bg-pink-700 rounded-2xl mx-24 px-1 text-center ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis doloremque nobis, quod sequi iure totam error nam, reiciendis delectus tenetur recusandae veniam numquam consequuntur ex repudiandae veritatis doloribus, ad molestias! </div>
+        <div class="h-52 w-52 bg-pink-800 hover:bg-pink-950 rounded-2xl"> </div>
+        <div class="h-52 w-52 bg-pink-600 hover:bg-pink-700 rounded-3xl mx-24 "> </div>
         <button class= "h-16 w-20 bg-violet-500 rounded-3xl hover:bg-violet-600 focus:outline-none focus:ring focus:ring-violet-300 ...">
-            Save changes
+            done
           </button>
     </div>
     
