--- a/tailwind css/New folder/src/background.html
+++ b/tailwind css/New folder/src/background.html
@@ -11,73 +11,73 @@
 <!-- lacture-3 -->
 
     <!-- flex-basis -->
-    <!-- <div class="flex  space-x-5">
+    <div class="flex  space-x-5">
         <div class=" h-50 w-50 bg-pink-400 text-center basis-1/4 ">01</div>
         <div class=" h-50 w-50 bg-pink-400 text-center basis-1/4">02</div>
         <div class=" h-50 w-50 bg-pink-400 text-center basis-1/2">03</div>
-    </div> -->
+    </div>
 
 <!-- flex-direction -->
 <!-- flrx-row -->
 
-<!-- <div class="flex  flex-row ">
+<div class="flex  flex-row ">
     <div class=" h-32 w-44 bg-orange-500 text-center  ">01</div>
     <div class=" h-32 w-44 bg-orange-500 text-center ">02</div>
     <div class=" h-32 w-44 bg-orange-500 text-center ">03</div>
-</div> -->
+</div>
 
 <!-- flex-row-reverse -->
-<!-- <div class="flex  flex-row-reverse ">
+<div class="flex  flex-row-reverse ">
     <div class=" h-28 w-32 bg-rose-400 text-center  ">01</div>
     <div class=" h-28 w-32 bg-rose-400 text-center ">02</div>
     <div class=" h-28 w-32 bg-rose-400 text-center ">03</div>
-</div> -->
+</div>
 
 <!-- flex-col -->
-<!-- <div class="flex  flex-col ">
+<div class="flex  flex-col ">
     <div class=" h-28 w-32 bg-amber-900 text-center  ">01</div>
     <div class=" h-28 w-32 bg-amber-900 text-center ">02</div>
     <div class=" h-28 w-32 bg-amber-900 text-center ">03</div>
-</div>  -->
+</div> 
 
 <!-- flex-col-reverse -->
-<!-- <div class="flex  flex-col-reverse">
+<div class="flex  flex-col-reverse">
     <div class=" h-32 w-44 bg-lime-500 text-center  ">01</div>
     <div class=" h-32 w-44 bg-lime-500 text-center ">02</div>
     <div class=" h-32 w-44 bg-lime-500 text-center ">03</div>
-</div>  -->
+</div> 
 
 <!-- flex-nowrap -->
-<!-- <div class="flex  flex-nowrap ">
+<div class="flex  flex-nowrap ">
     <div class=" h-32 w-44 bg-teal-400 text-center  ">01</div>
     <div class=" h-32 w-44 bg-teal-400 text-center ">02</div>
     <div class=" h-32 w-44 bg-teal-400 text-center ">03</div>
-</div>  -->
+</div> 
 
 <!-- flex-wrap -->
-<!-- <div class="flex flex-wrap">
+<div class="flex flex-wrap">
     <div class=" h-32 w-44 bg-sky-700 text-center ">01</div>
     <div class=" h-32 w-44 bg-sky-700 text-center ">02</div>
     <div class=" h-32 w-44 bg-sky-700 text-center ">03</div>
-</div>  -->
+</div> 
 
 <!-- flex-warp-reverse -->
-<!-- <div class="flex  flex-wrap-reverse ">
+<div class="flex  flex-wrap-reverse ">
     <div class=" h-32 w-44 bg-sky-400 text-center  ">01</div>
     <div class=" h-32 w-44 bg-sky-400 text-center ">02</div>
     <div class=" h-32 w-44 bg-sky-400 text-center ">03</div>
-</div>  -->
+</div> 
 
 <!-- The word-wrap property allows long words to be able to be broken and wrap onto the next line. -->
 <!-- You learned from the CSS Media Queries [responsive] chapter that you can use media queries to create different 
     layouts for different screen sizes and devices. -->
 
     <!-- flex -->
-    <!-- <div class="flex ">
+    <div class="flex ">
         <div class=" h-32 w-32 bg-indigo-300 text-center flex-none ">01</div>
         <div class=" h-32 w-52 bg-indigo-400 text-center ">02</div>
         <div class=" h-32 w-32 bg-indigo-500 text-center ">03</div>
-    </div>   -->
+    </div>  
 
     <!-- flex-auto -->
     <!-- <div class="flex ">
@@ -373,8 +373,6 @@
         <div class="h-20 w-52 bg-purple-400 text-center">2</div>
         <div class="h-20 w-52 bg-purple-400 text-center">3</div>
      </div> -->
-
-nick fury, [08-03-2024 15:55]
 <!-- divide-style  -->
      <!-- <div class=" divide-y divide-solid">
         <div class="h-20 w-52 bg-purple-400 text-center">1</div>
